Add Application Template crud functionality